Kubernetes/kcna/code-cloud/networking/ingress/service-definition.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress

spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocl: TCP
    name: http
  - port: 443
    targetPort: 443
    protocol: TCP
    name: https
  selector:
    app: nginx-ingress
