Kubernetes/kcna/code-cloud/networking/ingress/ingress-wear.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-wear
spec:
  backend:
    serviceName: wear-service
    servisePort: 80
